--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "description": "",
   "devDependencies": {
     "css-loader": "^7.1.2",
+    "eslint": "^8.57.1",
     "html-webpack-plugin": "^5.6.3",
+    "prettier": "^3.5.2",
+    "prettier-eslint": "^16.3.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1",
